--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body> 
     <div class="main">
     <nav class="navbar"> 
-        <img src="Pan2Plate-logo.svg" height="80vh">
+        <img src="Pan2Plate-logo.svg" height="76vh">
         <div class="tab">
             <div class="buttons"><a  class="ancho">Home</a></div>
             <div class="buttons"><a  class="ancho">Recipes</a></div>
@@ -21,13 +21,18 @@
            <button class="self">Search</button>
         </div>
     </nav>
-    <!-- <div class="firstback">
+    <div class="firstback">
         <div class="darker"></div>
         <div class="headtext">
         <div class="mainhead"><b><b>Unleash Culinary</b></b></div>
         <div class="mainhead" id="hr"><b><b>Excellence</b></b></div>
-        <div class="mainpara">Explore a world of flavors, discover handcrafted recipes, and let the aroma of our passion for cooking fill your kitchen.</div>
-        </div> -->
+        <div class="text">
+         Explore a world of flavors, discover handcrafted recipes, and let the aroma of our passion for cooking fill your kitchen.</div>
+                 <div class="but">
+            <button onclick="window.open('recipes.html', '_blank');" class="rece">Expore Recipes</button>
+        </div>
+        </div>
+
     </div>
     </div>
 </body>
